@@ -6,15 +6,16 @@ requires "HTML::Restrict" => "0";
 requires "HTTP::CookieMonster" => "0";
 requires "JSON::MaybeXS" => "0";
 requires "Log::Dispatch" => "0";
-requires "Moose" => "0";
-requires "MooseX::StrictConstructor" => "0";
-requires "MooseX::Types::Common::Numeric" => "0";
-requires "MooseX::Types::Moose" => "0";
+requires "Moo" => "0";
+requires "MooX::StrictConstructor" => "0";
 requires "Parse::MIME" => "0";
 requires "Sub::Exporter" => "0";
 requires "Term::Size::Any" => "0";
 requires "Text::SimpleTable::AutoWidth" => "0.09";
 requires "Try::Tiny" => "0";
+requires "Type::Tiny" => "0";
+requires "Types::Common::Numeric" => "0";
+requires "Types::Standard" => "0";
 requires "URI::Query" => "0";
 requires "URI::QueryParam" => "0";
 requires "XML::Simple" => "0";
